# fizobia

./: .env.axium.example  .env.domain.example  .env.llm.example  .env.onchain.example  .env.server.example  .gitignore  README.md  StartupPortalView.tsx  fizobia-zinesh.code-workspace  hardhat.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  run_stack.py
contracts/: AgentStakingPool.sol  MockUSDC.sol  StakingFactory.sol
deploy/: Caddyfile.example  nginx-axium.conf.example  oam-ecosystem.service  oam-hub.service
deployments/: local.json  local.json.example  sepolia.example.json
docs/: cursor-zinesh-setup.md  deploy-domain-tr.md  deploy-server.md  ecosystem-growth.md  zinesh-site-integration.md
scripts/: bootstrap_new_server.sh  demo_departments_simulation.py  demo_ecosystem_growth.py  demo_mesh_proof.py  demo_x402_all.py  demo_x402_market_pulse.py  demo_x402_sentiment_radar.py  deploy_axium_production.sh  deploy_base_sepolia.sh  deploy_remote_axium.sh  deploy_server.sh  dev_zinesh_cursor.bat  dev_zinesh_cursor.sh  enable_base_sepolia.sh  go_live.sh  install_hub_server.sh  install_on_89.47.113.150.sh  pre_server_check.sh  ready_for_server.sh  run_local_demo.sh  set_funding_wallet.sh  setup_ssl_axium.sh  start_ecosystem_stack.sh  start_founder_stack.sh  start_full_stack.sh  start_hub.bat  start_hub.ps1  start_hub.sh  start_onchain_stack.bat  start_onchain_stack.sh  start_production.sh  uninstall_axium.sh  verify_axium_production.py  verify_hub_integration.py  verify_hub_ui.sh  verify_live_stack.py
(+182 files in other folders)
